--- a/app/modules/dataBase/template/mdDialog/showProcessDetail.html
+++ b/app/modules/dataBase/template/mdDialog/showProcessDetail.html
@@ -80,7 +80,7 @@
         </md-dialog-content>
         <md-dialog-actions layout="row" class="new--project--manage--modal--footer">
             <span flex></span>
-            <md-button ng-click="vm.cancel()" class="gay--btn" translate="MODULES_BATCH_CLOSE">
+            <md-button ng-click="vm.cancel()" class="default--btn" translate="MODULES_BATCH_CLOSE">
                 关闭
             </md-button>
         </md-dialog-actions>
