--- a/app/modules/dataBase/template/sideBar/sideBar.html
+++ b/app/modules/dataBase/template/sideBar/sideBar.html
@@ -50,7 +50,7 @@
             <div class="attr--row">
                 <span class="head" translate="MODULES_DATABASE_ARCHIVED_DATA">归档数据量</span>
                 <span >
-                    {{vm.entity.capacity}}MB
+                    {{vm.entity.capacity | formatByte}}
                 </span>
             </div>
         </div>
