--- a/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/updateModule.html
+++ b/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/updateModule.html
@@ -3,17 +3,17 @@
         <div class="new-project-alert-icon-box">
             <img src="images/upgrade-project-alert-icon.png" alt=""/></div>
         <div class="new-project-alert-prompt">
-            <h1>确定升级吗?</h1>
+            <h1 translate="MODULES_PROJECTMANAGE_IS_THERE_AN_UPGRADE">确定升级吗?</h1>
         </div>
         <div class="success--tips">
-            <span>数据模板修改之后需要升级</span>
+            <span translate="MODULES_PROJECTMANAGE_DATA_TEMPLATES_NEED_TO_BE_UPGRADED">数据模板修改之后需要升级</span>
         </div>
         <div class="btn-box" >
-            <md-button  ng-disabled="vm.loading" ng-click="vm.cancel()" class="gray--btn">
-                取消
+            <md-button  ng-disabled="vm.loading" ng-click="vm.cancel()" translate="MODULES_PROJECTMANAGE_NOT_UPGRADE">
+                不升级
             </md-button>
-            <md-button  ng-disabled="vm.loading" ng-click="vm.update()" class="green--btn">
-                确定
+            <md-button  ng-disabled="vm.loading" ng-click="vm.update()" class="green--btn" translate="MODULES_PROJECTMANAGE_UPGRADE">
+                升级
             </md-button>
         </div>
 
