--- a/app/modules/projectManage/template/mdDialog/deleteAlert.html
+++ b/app/modules/projectManage/template/mdDialog/deleteAlert.html
@@ -12,10 +12,10 @@
             </div>
         </md-dialog-content>
         <md-dialog-actions layout="row" class="project-manage-delete-alert-modal-footer">
-            <md-button  ng-disabled="vm.loading" ng-click="vm.cancel()" class="">
+            <md-button  ng-disabled="vm.loading" ng-click="vm.cancel()" translate="MODULES_PROJECTMANAGE_CANCEL">
                 取消
             </md-button>
-            <md-button  ng-disabled="vm.loading" ng-click="vm.confirm()" class="green--btn">
+            <md-button  ng-disabled="vm.loading" ng-click="vm.confirm()" class="green--btn" translate="MODULES_PROJECTMANAGE_CONFIRM">
                 确定
             </md-button>
         </md-dialog-actions>
