--- a/app/modules/projectManage/template/mdDialog/newProjectAlert.html
+++ b/app/modules/projectManage/template/mdDialog/newProjectAlert.html
@@ -3,13 +3,13 @@
         <div class="new-project-alert-icon-box">
             <img src="images/new-project-alert-icon.png" alt=""/></div>
         <div class="new-project-alert-prompt">
-            <h1>干得不错！</h1>
+            <h1 translate="MODULES_PROJECTMANAGE_GOOD_JOB">干得不错！</h1>
         </div>
         <div class="success--tips">
-            <span>项目创建完成</span>
+            <span translate="MODULES_PROJECTMANAGE_PROJECT_COMPLETION">项目创建完成</span>
         </div>
         <div class="btn-box" >
-            <md-button  ng-disabled="vm.loading" ng-click="vm.cancel()" class="green--btn">
+            <md-button  ng-disabled="vm.loading" ng-click="vm.cancel()" class="green--btn" translate="MODULES_PROJECTMANAGE_CONFIRM">
                 确定
             </md-button>
         </div>
