--- a/app/modules/serviceWatch/template/ui-grid-template/grid-service-keepTim.html
+++ b/app/modules/serviceWatch/template/ui-grid-template/grid-service-keepTim.html
@@ -1,6 +1,6 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <span >{{row.entity.keepDay}}天 </span>
-    <span >{{row.entity.keepHour}}小时 </span>
-    <span >{{row.entity.keepMinute}}分 </span>
+    <span >{{row.entity.keepDay}} <span class="MODULES_SERVICEWATCH_DAY">天</span></span>
+    <span >{{row.entity.keepHour}} <span class="MODULES_SERVICEWATCH_HOUR">小时</span> </span>
+    <span >{{row.entity.keepMinute}} <span class="MODULES_SERVICEWATCH_MINUTE">分</span> </span>
 
 </div>
