--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1526,7 +1526,12 @@ path.link {
   height: 100%;
   position: relative; }
   .data--module--new--prompt--wrap .data--module--new--prompt--box {
-    padding: 0 15px; }
+    padding: 0 15px;
+    height: 100%; }
+  .data--module--new--prompt--wrap .new--prompt--box--wrap {
+    height: 100%; }
+  .data--module--new--prompt--wrap .data--module--content--wrap {
+    height: 100%; }
   .data--module--new--prompt--wrap .new--prompt--box {
     color: #337ab7;
     background: #ECF6FB;
@@ -1664,6 +1669,11 @@ path.link {
 
 .edit--project--manage--wrapper {
   padding: 0 8px; }
+  .edit--project--manage--wrapper.data--module {
+    height: calc(100% - 70px);
+    overflow: auto;
+    padding: 0;
+    margin-right: -15px; }
   .edit--project--manage--wrapper .base--info--content .edit--project--row--box {
     margin-bottom: 40px; }
     .edit--project--manage--wrapper .base--info--content .edit--project--row--box .edit--project--row {
@@ -1854,7 +1864,9 @@ path.link {
     position: absolute;
     top: 0;
     right: 10px;
-    width: 286px; }
+    bottom: 0;
+    width: 286px;
+    overflow-y: auto; }
     .module--Template--wrap .models--list--wrap .models--list--box {
       padding: 20px 0 20px 20px;
       background: #f2f2f0;
@@ -1863,9 +1875,14 @@ path.link {
         display: block;
         margin-bottom: 5px; }
       .module--Template--wrap .models--list--wrap .models--list--box ul {
-        list-style-type: none; }
+        list-style-type: none;
+        padding-left: 25px; }
         .module--Template--wrap .models--list--wrap .models--list--box ul li {
-          padding-top: 5px; }
+          padding: 2px 0; }
+      .module--Template--wrap .models--list--wrap .models--list--box .angular-ui-tree-nodes {
+        padding-left: 20px; }
+        .module--Template--wrap .models--list--wrap .models--list--box .angular-ui-tree-nodes:first-child {
+          padding-left: 0; }
   .module--Template--wrap .module--Template--wrap__show-wrap {
     width: 100%;
     padding-right: 296px; }
@@ -2188,6 +2205,9 @@ path.link {
   display: inline-block;
   vertical-align: middle; }
 
+.common--uigrid--height.batch-grid {
+  height: calc(100% - 66px); }
+
 .service--watch--wrap {
   width: 100%;
   height: 100%;
@@ -2222,6 +2242,19 @@ path.link {
           color: #ff9900;
           font-size: 15px;
           margin-right: 5px; }
+
+.current--state--info {
+  display: inline-block;
+  padding: 2px 14px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  color: #ffffff;
+  font-size: 12px;
+  line-height: normal; }
+  .current--state--info.normal--state {
+    background: #009933; }
+  .current--state--info.stop--state {
+    background: #e54c40; }
 
 .table > tbody + tbody {
   border-top: none; }
@@ -2278,5 +2311,17 @@ path.link {
     .mission--list--spread--box .attr--box.date {
       flex: 1;
       min-width: 250px; }
+
+.service--watch--list--operation--box {
+  font-size: 16px;
+  color: #797979; }
+  .service--watch--list--operation--box .star--btn {
+    color: #009933; }
+    .service--watch--list--operation--box .star--btn.button-disabled {
+      color: #797979; }
+  .service--watch--list--operation--box .stop--btn {
+    color: #ff0000; }
+    .service--watch--list--operation--box .stop--btn.button-disabled {
+      color: #797979; }
 
 /*# sourceMappingURL=main.css.map */
