--- a/app/css/main/_rewrite.scss
+++ b/app/css/main/_rewrite.scss
@@ -14,5 +14,66 @@
 
 md-dialog{
   max-width: 95%;
+}
 
+md-autocomplete{
+  height: 34px;
+  border-radius: 4px;
+  md-autocomplete-wrap{
+    height: inherit;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    line-height: normal;
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075) !important;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+    input:not(.md-input){
+      height: 32px;
+      line-height: normal;
+      color: #555555;
+
+      //&:focus{
+      //  border-color: #66afe9;
+      //  outline: 0;
+      //  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+      //  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+      //}
+    }
+    md-icon{
+      height: 20px;
+      width: 20px;
+      min-height: 20px;
+      min-width: 20px;
+    }
+  }
+}
+.drop--group--box{
+  display: inline-block;
+  vertical-align: middle;
+  .drop--group{
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #199ed8;
+    cursor: pointer;
+    border-radius: 50%;
+    &.drop--on{
+      border-color: rgba(0,0,0,0.54);
+    }
+    &.drop--off{
+      position: relative;
+      .core{
+        width: 18px;
+        height: 18px;
+        background: #199ed8;
+        transform: scale(.5);
+        position: absolute;
+        top: -1px;
+        left: -1px;
+        border-radius: 50%;
+      }
+
+    }
+  }
 }
