--- a/app/css/main/_select.scss
+++ b/app/css/main/_select.scss
@@ -39,9 +39,11 @@ md-checkbox.md-default-theme:not([disabled]).md-primary.md-checked .md-icon, md-
 //  box-shadow:0 2px rgb(63,81,181)
 //}
 .md-tab{
+  text-transform: none;
   &.md-active{
     color: #333333 !important;
     padding: 12px 16px;
+    //text-transform: none;
   }
 }
 md-tabs.md-default-theme, md-tabs{
