--- a/app/modules/batch/css/_batch.scss
+++ b/app/modules/batch/css/_batch.scss
@@ -182,3 +182,9 @@
   display: inline-block;
   vertical-align: middle;
 }
+
+.common--uigrid--height{
+  &.batch-grid{
+    height: calc(100% - 66px);
+  }
+}
