--- a/app/modules/dataBase/template/mdDialog/checkData.html
+++ b/app/modules/dataBase/template/mdDialog/checkData.html
@@ -49,12 +49,12 @@
             </div>
 
         </md-dialog-content>
-        <md-dialog-actions layout="row" class="new--project--manage--modal--footer">
-            <span flex></span>
-            <md-button class="gay--btn" ng-disabled="vm.loading" ng-click="vm.cancel()" translate="MODULES_BATCH_CLOSE">
-                关闭
-            </md-button>
-        </md-dialog-actions>
+        <!--<md-dialog-actions layout="row" class="new&#45;&#45;project&#45;&#45;manage&#45;&#45;modal&#45;&#45;footer">-->
+            <!--<span flex></span>-->
+            <!--<md-button class="default&#45;&#45;btn" ng-disabled="vm.loading" ng-click="vm.cancel()" translate="MODULES_BATCH_CLOSE">-->
+                <!--关闭-->
+            <!--</md-button>-->
+        <!--</md-dialog-actions>-->
 
 </md-dialog>
 
