--- a/app/modules/projectManage/projectEdit/moduleTemplate/template/mdDialog/previewTemplateForm.html
+++ b/app/modules/projectManage/projectEdit/moduleTemplate/template/mdDialog/previewTemplateForm.html
@@ -9,7 +9,7 @@
                 <div class="preview--template--form--head">
                     <img src="images/preview--box--icon.png" alt=""/>
                     <div class="title--box">
-                        <div class="title">业务流水号</div>
+                        <div class="title" translate="MODULES_DATABASE_BUSINESS_TRANSACTION">业务流水号</div>
                         <div class="number">330000191510201000756</div>
                     </div>
                 </div>
@@ -57,10 +57,10 @@
         </md-dialog-content>
         <md-dialog-actions layout="row" class="new--project--manage--modal--footer">
             <span flex></span>
-            <md-button ng-click="vm.cancel()" class="gay--btn">
+            <md-button ng-click="vm.cancel()" translate="MODULES_PROJECTMANAGE_CANCEL">
                 取消
             </md-button>
-            <md-button ng-click="vm.saveTemplate()" class="green--btn">
+            <md-button ng-click="vm.saveTemplate()" class="green--btn" translate="MODULES_PROJECTMANAGE_SAVE">
                 保存
             </md-button>
         </md-dialog-actions>
