--- a/app/modules/serviceWatch/template/ui-grid-template/grid-service-status.html
+++ b/app/modules/serviceWatch/template/ui-grid-template/grid-service-status.html
@@ -1,4 +1,4 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <span ng-if="row.entity.jobStatus == 'PAUSED'"> 服务停止 </span>
-    <span ng-if="row.entity.jobStatus != 'PAUSED'"> 运行正常 </span>
+    <span class="current--state--info" ng-class="{'normal--state': data.jobStatus != 'PAUSED','stop--state': data.jobStatus == 'PAUSED'}"  ng-if="row.entity.jobStatus == 'PAUSED'"> 停止 </span>
+    <span class="current--state--info" ng-class="{'normal--state': data.jobStatus != 'PAUSED','stop--state': data.jobStatus == 'PAUSED'}"  ng-if="row.entity.jobStatus != 'PAUSED'"> 正常 </span>
 </div>
