--- a/app/modules/batch/template/sideBar/sideBar.html
+++ b/app/modules/batch/template/sideBar/sideBar.html
@@ -17,15 +17,15 @@
                     <!--<span>基本信息</span>-->
                     <div class="single--attr--row">
                         <label class="title" translate="MODULES_BATCH_BATCH_NUMBER">批次号</label>
-                        <span class="value">{{vm.batchInfo.batchCode}}</span>
+                        <span class="value" title="{{vm.batchInfo.batchCode}}">{{vm.batchInfo.batchCode}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title" translate="MODULES_BATCH_BUSINESS_SYSTEM_ID">业务系统ID</label>
-                        <span class="value">{{vm.projectInfo.businessCode}}</span>
+                        <span class="value" title="{{vm.projectInfo.businessCode}}">{{vm.projectInfo.businessCode}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title" translate="MODULES_BATCH_BUSINESS_SYSTEM_NAME">业务系统名称</label>
-                        <span class="value">{{vm.projectInfo.systemName}}</span>
+                        <span class="value" title="{{vm.projectInfo.systemName}}">{{vm.projectInfo.systemName}}</span>
                     </div>
                     <div class="single--attr--row">
                         <label class="title" translate="MODULES_BATCH_STATE">状态</label>
