--- a/app/modules/dataBase/template/mdDialog/checkData.html
+++ b/app/modules/dataBase/template/mdDialog/checkData.html
@@ -12,7 +12,7 @@
                 </button>
             </div>
         </md-toolbar>
-        <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
+        <!--<md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>-->
         <md-dialog-content class="check--data--content">
             <div class="search--wrap">
                 <div class="time--frame-box">
