--- a/app/css/main.css
+++ b/app/css/main.css
@@ -95,9 +95,10 @@
     vertical-align: middle;
     width: 145px; }
 
-.button-disabled {
-  cursor: not-allowed;
-  color: gray; }
+.md-button.md-default-theme[disabled], .md-button[disabled] {
+  cursor: not-allowed !important;
+  box-shadow: none;
+  opacity: .65; }
 
 .green--btn {
   display: inline-block;
@@ -119,7 +120,9 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   margin: 0 8px; }
   .green--btn:hover {
-    background: #03ce86 !important; }
+    background: #3eae81 !important; }
+  .green--btn[disabled]:hover {
+    background: #40B98E !important; }
 
 .red--btn {
   display: inline-block;
@@ -141,7 +144,9 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
   margin: 0 8px; }
   .red--btn:hover {
-    background: #de421b !important; }
+    background: #cd624c !important; }
+  .red--btn[disabled]:hover {
+    background: #E1654F !important; }
 
 .gray--btn {
   display: inline-block;
@@ -164,6 +169,36 @@
   margin: 0 8px; }
   .gray--btn:hover {
     background: #999999 !important; }
+  .gray--btn[disabled]:hover {
+    background: #cacaca !important; }
+
+.default--btn {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  min-height: 36px;
+  min-width: 88px;
+  line-height: 100%;
+  vertical-align: middle;
+  align-items: center;
+  text-align: center;
+  border-radius: 4px;
+  box-sizing: border-box;
+  outline: none;
+  color: #4a4a4a !important;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #ccc;
+  background-color: #ffffff;
+  padding: 0 12px;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  margin: 0 8px; }
+  .default--btn:hover {
+    color: #4a4a4a;
+    background-color: #e6e6e6;
+    border-color: #adadad; }
+  .default--btn[disabled]:hover {
+    background: #ffffff !important; }
 
 .blue--btn {
   display: inline-block;
@@ -186,13 +221,15 @@
   margin: 0 8px; }
   .blue--btn:hover {
     background: #4c8bc5 !important; }
+  .blue--btn[disabled]:hover {
+    background: #4F93C5 !important; }
 
 .md-button {
   font-size: inherit;
   text-transform: none; }
 
 body {
-  font-family: Arial, Verdana, Tahoma, "Hiragino Sans GB", Microsoft YaHei, SimSun, sans-serif;
+  font-family: Arial, Tahoma, Verdana, "Hiragino Sans GB", Microsoft YaHei, SimSun, sans-serif;
   font-size: 13px;
   line-height: 1.42857143;
   color: #333; }
@@ -244,7 +281,6 @@ a:focus, a:hover {
     padding-right: 5px; }
 
 md-checkbox .md-label {
-  line-height: normal;
   margin-left: 28px; }
 
 md-checkbox .md-container {
@@ -301,8 +337,7 @@ md-input-container {
 
 .form-control {
   font-size: inherit;
-  padding: 6px 6px 6px 6px;
-  line-height: 35px; }
+  padding: 6px 6px 7px 6px; }
 
 .input-group .input-group-btn .glyphicon-calendar {
   color: #797979; }
@@ -324,6 +359,9 @@ md-select {
   min-height: 28px;
   line-height: 100%; }
 
+.md-select-value .md-select-icon:after {
+  top: 0; }
+
 md-select.md-default-theme:not([disabled]):focus .md-select-value, md-select:not([disabled]):focus .md-select-value {
   border-bottom-color: transparent !important;
   color: inherit; }
@@ -339,9 +377,11 @@ md-select.md-default-theme[disabled] .md-select-value, md-select[disabled] .md-s
 md-checkbox.md-default-theme:not([disabled]).md-primary.md-checked .md-icon, md-checkbox:not([disabled]).md-primary.md-checked .md-icon {
   background-color: #199ed8; }
 
-.md-tab.md-active {
-  color: #333333 !important;
-  padding: 12px 16px; }
+.md-tab {
+  text-transform: none; }
+  .md-tab.md-active {
+    color: #333333 !important;
+    padding: 12px 16px; }
 
 md-tabs.md-default-theme md-ink-bar, md-tabs md-ink-bar {
   top: 0;
@@ -366,6 +406,58 @@ md-tabs.md-default-theme md-ink-bar, md-tabs md-ink-bar {
 
 md-dialog {
   max-width: 95%; }
+
+md-autocomplete {
+  height: 34px;
+  border-radius: 4px; }
+  md-autocomplete md-autocomplete-wrap {
+    height: inherit;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    line-height: normal;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) !important;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s; }
+    md-autocomplete md-autocomplete-wrap input:not(.md-input) {
+      height: 32px;
+      line-height: normal;
+      color: #555555; }
+    md-autocomplete md-autocomplete-wrap md-icon {
+      height: 20px;
+      width: 20px;
+      min-height: 20px;
+      min-width: 20px; }
+
+.drop--group--box {
+  display: inline-block;
+  vertical-align: middle; }
+  .drop--group--box .drop--group {
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #199ed8;
+    cursor: pointer;
+    border-radius: 50%; }
+    .drop--group--box .drop--group.drop--on {
+      border-color: rgba(0, 0, 0, 0.54); }
+    .drop--group--box .drop--group.drop--off {
+      position: relative; }
+      .drop--group--box .drop--group.drop--off .core {
+        width: 18px;
+        height: 18px;
+        background: #199ed8;
+        transform: scale(0.5);
+        position: absolute;
+        top: -1px;
+        left: -1px;
+        border-radius: 50%; }
+
+md-toolbar.md-menu-toolbar {
+  margin-bottom: 20px; }
+
+md-dialog .md-dialog-content {
+  padding: 0 24px 24px 24px; }
 
 .grid-search-input {
   margin-top: 10px;
@@ -406,9 +498,6 @@ div.ui-grid-cell input.edit-input {
   background-color: transparent;
   border-right: none; }
 
-.hs-ui-grid-cell-contents {
-  background: transparent; }
-
 .ui-grid-row {
   background: transparent; }
   .ui-grid-row:hover {
@@ -428,7 +517,9 @@ div.ui-grid-cell input.edit-input {
 .hs-ui-grid-cell-contents {
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis; }
+  text-overflow: ellipsis;
+  background: transparent;
+  line-height: 29px; }
 
 .ui-grid-header-cell {
   border-right: none; }
@@ -514,12 +605,17 @@ div.ui-grid-cell input.edit-input {
 
 .ui-grid-selection-row-header-buttons {
   opacity: 1; }
+  .ui-grid-selection-row-header-buttons md-checkbox .md-container {
+    width: 20px;
+    height: 20px;
+    top: 45%; }
 
 .ui-grid-pager-panel {
   line-height: normal;
   width: 280px;
   left: calc(100% - 280px);
-  top: -72px; }
+  top: -72px;
+  height: 0; }
 
 td {
   vertical-align: middle; }
@@ -567,7 +663,7 @@ td {
   transform: translateY(30px); }
 
 .node text {
-  font-size: 11px; }
+  font-size: 12px; }
 
 path.link {
   fill: none;
@@ -664,7 +760,7 @@ path.link {
 
 .data--base--sidenav--right--box {
   float: left;
-  width: calc(100% - 237px);
+  width: calc(100% - 235px);
   height: 100%; }
   .data--base--sidenav--right--box .data--filtering--wrapper {
     margin: 15px 0;
@@ -703,8 +799,7 @@ path.link {
         .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--title {
           display: inline-block;
           vertical-align: middle;
-          margin-right: 5px;
-          line-height: normal; }
+          margin-right: 5px; }
         .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box .attribute--value {
           display: inline-block;
           vertical-align: middle; }
@@ -857,7 +952,8 @@ path.link {
 
 .data--base--view--type--filter {
   height: 94px;
-  line-height: 94px; }
+  line-height: 94px;
+  overflow: hidden; }
   .data--base--view--type--filter_title {
     display: inline-block;
     vertical-align: middle; }
@@ -958,7 +1054,12 @@ path.link {
         color: #999999;
         font-weight: normal; }
       .data--base--right--sidebar--info--wrap .data--base--right--sidebar--info--content .attr--type--box .attr--value {
-        padding-left: 25px; }
+        display: inline-block;
+        width: 100%;
+        padding-left: 25px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; }
       .data--base--right--sidebar--info--wrap .data--base--right--sidebar--info--content .attr--type--box .attr--row {
         padding-left: 25px;
         padding-bottom: 5px; }
@@ -989,8 +1090,7 @@ path.link {
         .check--data--modal .check--data--content .search--wrap .time--frame-box .time--frame--title {
           display: inline-block;
           vertical-align: middle;
-          margin-right: 5px;
-          line-height: normal; }
+          margin-right: 5px; }
         .check--data--modal .check--data--content .search--wrap .time--frame-box .time--frame--value {
           display: inline-block;
           vertical-align: middle;
@@ -1013,7 +1113,7 @@ path.link {
 .data--base--svg--wrap {
   float: left;
   width: calc(100% - 300px);
-  height: calc(100% - 111px);
+  height: calc(100% - 96px);
   overflow: auto;
   position: relative; }
   .data--base--svg--wrap .data--base--svg--operation-box {
@@ -1033,6 +1133,74 @@ path.link {
       background: #ffffff;
       color: #e4e4e4;
       outline: none; }
+
+.connect--map--wrap {
+  width: 100%;
+  height: 100%;
+  background: #ffffff; }
+  .connect--map--wrap_data--count {
+    background: #F2F2EA;
+    border-radius: 4px;
+    height: 94px;
+    width: calc(100% - 48px);
+    margin: 24px;
+    padding: 20px;
+    display: table; }
+    .connect--map--wrap_data--count .cell-box {
+      display: table-cell;
+      text-align: center;
+      border-right: 1px solid #d6e0e3; }
+      .connect--map--wrap_data--count .cell-box:last-child {
+        border: none; }
+      .connect--map--wrap_data--count .cell-box .fa {
+        font-size: 24px;
+        color: #9EA2A8;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 20px; }
+      .connect--map--wrap_data--count .cell-box .data--description {
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 18px; }
+        .connect--map--wrap_data--count .cell-box .data--description .head {
+          font-size: 12px;
+          color: #999999;
+          margin-bottom: 8px; }
+        .connect--map--wrap_data--count .cell-box .data--description .color-one {
+          color: #00A0D1; }
+        .connect--map--wrap_data--count .cell-box .data--description .color-two {
+          color: #6B9816; }
+        .connect--map--wrap_data--count .cell-box .data--description .color-three {
+          color: #906094; }
+        .connect--map--wrap_data--count .cell-box .data--description .color-four {
+          color: #B5872C; }
+
+.tiptool--show--wrap .tiptool--show--data--table {
+  display: inline-block;
+  font-size: 12px;
+  border-radius: 4px;
+  padding: 15px 10px;
+  background: #333333;
+  color: #ffffff;
+  opacity: .95;
+  word-break: keep-all;
+  position: relative; }
+  .tiptool--show--wrap .tiptool--show--data--table th {
+    color: #C9C9C9;
+    font-weight: normal; }
+  .tiptool--show--wrap .tiptool--show--data--table th td {
+    word-break: keep-all; }
+.tiptool--show--wrap .org--bot {
+  width: 0;
+  height: 0;
+  font-size: 0;
+  border-width: 10px;
+  border-style: solid;
+  border-color: transparent #333333 transparent transparent;
+  overflow: hidden;
+  position: absolute;
+  left: -19px;
+  top: 60px; }
 
 .hs-user-login {
   width: 100%;
@@ -1171,12 +1339,12 @@ path.link {
           font-weight: normal;
           transform: none; }
         .normal--user--login .input-content-wrapper .input-content--box .user-login-input__input {
-          height: 40px;
-          line-height: 40px;
-          border: 1px solid #e1e1e1;
+          height: 34px;
+          border: 1px solid #cccccc;
           border-radius: 4px;
           background: #ffffff;
-          padding: 6px; }
+          padding: 0 6px;
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075); }
         .normal--user--login .input-content-wrapper .input-content--box .user-login-input .select--language--title {
           font-weight: normal;
           transform: none;
@@ -1260,10 +1428,10 @@ path.link {
     .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .header {
       height: 57px;
       min-height: 57px;
-      background: #40b98e;
+      background: #3DA484;
       font-size: 18px;
-      border-right: 1px solid #40b98e;
-      box-shadow: -5px 0 10px rgba(0, 0, 0, 0.1) inset; }
+      border-right: 1px solid #3DA484;
+      box-shadow: -3px 0 10px rgba(0, 0, 0, 0.1) inset; }
       .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .header .md-toolbar-tools {
         display: inline-block;
         height: 57px;
@@ -1291,7 +1459,7 @@ path.link {
           .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .separate--column--header .md-subheader-inner {
             border-bottom: 1px solid #505050;
             padding-bottom: 6px;
-            padding-left: 30px;
+            padding-left: 25px;
             font-size: 12px; }
         .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box {
           border-left: 5px solid #464646; }
@@ -1312,10 +1480,13 @@ path.link {
               margin-right: 5px;
               text-align: center;
               vertical-align: sub; }
+            .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box__text .fa-bar-chart {
+              font-size: 18px; }
           .info--archive--main--content--wrapper .info--archive--sidebar--wrapper .info--archive--sidebar--content .sidebar--column--wrapper .each--column--box .md-button {
             height: 48px;
             line-height: 48px;
-            padding-left: 27px; }
+            padding-left: 22px;
+            padding-right: 0; }
   .info--archive--main--content--wrapper .info--archive--right--content--wrapper {
     position: absolute;
     top: 0;
@@ -1326,8 +1497,8 @@ path.link {
       height: 57px;
       max-width: 1742px;
       width: auto;
-      background: #eaeae2;
-      border-bottom: 2px solid #e4e4e4; }
+      background: #46BC98;
+      border-bottom: 2px solid #46BC98; }
       .info--archive--main--content--wrapper .info--archive--right--content--wrapper .top--head--box .admin--info {
         float: right;
         height: 57px;
@@ -1351,7 +1522,7 @@ path.link {
       .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box .data--base--sidenav {
         float: left;
         height: 100%;
-        border-top: 1px solid #d7d7d7;
+        border-top: 1px solid #46BC98;
         margin-top: -1px; }
         .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box .data--base--sidenav .select--data--source--box {
           font-size: 16px;
@@ -2125,7 +2296,7 @@ path.link {
       .right--sidebar--info--content .attr--type--box .single--attr--row .title {
         display: inline-block;
         vertical-align: middle;
-        width: 115px;
+        width: 117px;
         text-align: left;
         color: #797979;
         padding: 0 5px;
@@ -2136,7 +2307,10 @@ path.link {
         vertical-align: middle;
         max-width: 245px;
         min-width: 55px;
-        margin-right: 5px; }
+        margin-right: 5px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis; }
         .right--sidebar--info--content .attr--type--box .single--attr--row .value .progress-striped {
           display: inline-block;
           height: 11px;
@@ -2206,7 +2380,12 @@ path.link {
   vertical-align: middle; }
 
 .common--uigrid--height.batch-grid {
-  height: calc(100% - 66px); }
+  height: calc(100% - 67px); }
+
+.batch--ui--grid--icon {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: middle; }
 
 .service--watch--wrap {
   width: 100%;
@@ -2323,5 +2502,67 @@ path.link {
     color: #ff0000; }
     .service--watch--list--operation--box .stop--btn.button-disabled {
       color: #797979; }
+
+.statistics--wrap {
+  width: 100%;
+  height: 100%;
+  background: #fafafa;
+  overflow-y: auto;
+  padding: 24px; }
+  .statistics--wrap_data--count {
+    background: #ffffff;
+    height: 94px;
+    width: 100%;
+    border: 1px solid #e4e4e4;
+    padding: 20px;
+    margin-bottom: 24px;
+    display: table; }
+    .statistics--wrap_data--count .cell-box {
+      display: table-cell;
+      text-align: center;
+      border-right: 1px solid #d6e0e3; }
+      .statistics--wrap_data--count .cell-box:last-child {
+        border: none; }
+      .statistics--wrap_data--count .cell-box .fa {
+        font-size: 24px;
+        color: #9EA2A8;
+        display: inline-block;
+        vertical-align: middle;
+        margin-right: 20px; }
+      .statistics--wrap_data--count .cell-box .data--description {
+        display: inline-block;
+        vertical-align: middle;
+        font-size: 18px; }
+        .statistics--wrap_data--count .cell-box .data--description .head {
+          font-size: 12px;
+          color: #999999;
+          margin-bottom: 8px; }
+        .statistics--wrap_data--count .cell-box .data--description .color-one {
+          color: #00A0D1; }
+        .statistics--wrap_data--count .cell-box .data--description .color-two {
+          color: #E7604A; }
+        .statistics--wrap_data--count .cell-box .data--description .color-three {
+          color: #6B9816; }
+        .statistics--wrap_data--count .cell-box .data--description .color-four {
+          color: #906094; }
+        .statistics--wrap_data--count .cell-box .data--description .color-five {
+          color: #36A699; }
+        .statistics--wrap_data--count .cell-box .data--description .color-six {
+          color: #B5872C; }
+  .statistics--wrap .row {
+    margin: 0 0 20px 0;
+    clear: both; }
+  .statistics--wrap_data--form {
+    height: calc(100% - 119px);
+    border: 1px solid #e4e4e4;
+    background: #ffffff;
+    padding: 10px 20px 10px 20px; }
+    .statistics--wrap_data--form .data--form--head {
+      font-size: 16px;
+      margin: 15px 0; }
+    .statistics--wrap_data--form .condition--filter--box {
+      margin-bottom: 20px; }
+      .statistics--wrap_data--form .condition--filter--box md-select {
+        display: inline-block; }
 
 /*# sourceMappingURL=main.css.map */
