--- a/app/css/main/_rewrite.scss
+++ b/app/css/main/_rewrite.scss
@@ -73,7 +73,18 @@ md-autocomplete{
         left: -1px;
         border-radius: 50%;
       }
-
     }
   }
+}
+
+md-toolbar.md-menu-toolbar{
+  margin-bottom: 20px;
+  //border-bottom: 1px solid #e4e4e4;
+}
+md-dialog .md-dialog-content{
+  padding: 0 24px 24px 24px;
+}
+
+.highcharts-background{
+  //fill: transparent;
 }
