--- a/app/css/main/_select.scss
+++ b/app/css/main/_select.scss
@@ -18,6 +18,10 @@ md-select{
   min-height: 28px;
   line-height: 100%;
 }
+.md-select-value .md-select-icon:after{
+  top: 0;
+
+}
 md-select.md-default-theme:not([disabled]):focus .md-select-value, md-select:not([disabled]):focus .md-select-value {
   border-bottom-color: transparent !important;
   color: inherit;
