--- a/app/modules/batch/css/_batch.scss
+++ b/app/modules/batch/css/_batch.scss
@@ -49,7 +49,7 @@
       .title{
         display: inline-block;
         vertical-align: middle;
-        width: 115px;
+        width: 117px;
         text-align: left;
         color: #797979;
         padding: 0 5px;
@@ -62,6 +62,9 @@
         max-width: 245px;
         min-width: 55px;
         margin-right: 5px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
         .progress-striped{
           display: inline-block;
           height: 11px;
@@ -185,6 +188,12 @@
 
 .common--uigrid--height{
   &.batch-grid{
-    height: calc(100% - 66px);
+    height: calc(100% - 67px);
   }
+}
+
+.batch--ui--grid--icon{
+  display: inline-block;
+  font-size:16px;
+  vertical-align: middle;
 }
