--- a/app/modules/batch/template/mdDialog/checkDetailData.html
+++ b/app/modules/batch/template/mdDialog/checkDetailData.html
@@ -8,7 +8,7 @@
             </button>
         </div>
     </md-toolbar>
-    <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
+    <!--<md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>-->
     <md-dialog-content class="check--error--list--modal_content">
         <div class="operation--box clearfix">
             <div class="pull-left">
@@ -20,7 +20,7 @@
                 </md-button>
             </div>
         </div>
-        <div  ui-grid="gridOptions" style="height: 100%" class="common--uigrid--height batch-grid "  ui-grid-auto-resize ui-grid-resize-columns  ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
+        <div  ui-grid="gridOptions"  class="common--uigrid--height batch-grid "  ui-grid-auto-resize ui-grid-resize-columns  ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
     </md-dialog-content>
 </md-dialog>
 
