--- a/app/modules/batch/template/mdDialog/checkErrorList.html
+++ b/app/modules/batch/template/mdDialog/checkErrorList.html
@@ -8,9 +8,9 @@
                 </button>
             </div>
         </md-toolbar>
-        <md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>
+        <!--<md-progress-linear ng-show="vm.loading" md-mode="indeterminate"></md-progress-linear>-->
         <md-dialog-content class="check--error--list--modal_content">
-            <div  ui-grid="gridOptions" style="height: 100%" class="common--uigrid--height "  ui-grid-auto-resize ui-grid-resize-columns   ui-grid-pagination ui-grid-pinning></div>
+            <div  ui-grid="gridOptions" class="common--uigrid--height "  ui-grid-auto-resize ui-grid-resize-columns   ui-grid-pagination ui-grid-pinning></div>
         </md-dialog-content>
 </md-dialog>
 
