--- a/app/modules/batch/template/ui-grid-template/grid-dataError-status.html
+++ b/app/modules/batch/template/ui-grid-template/grid-dataError-status.html
@@ -1,9 +1,9 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
     <div class="" >
-        <span  style="color:green;font-size:18px" ng-if="row.entity.batchStatus == 5" class="fa fa-check-circle-o"></span>
-        <span  style="color:#3a87ad;font-size:18px" ng-if="row.entity.batchStatus != 5 && row.entity.batchStatus != 6" class="glyphicon glyphicon-cog"></span>
+        <span  style="color:green;" ng-if="row.entity.batchStatus == 5" class="fa fa-check-circle-o batch--ui--grid--icon"></span>
+        <span  style="color:#3a87ad;" ng-if="row.entity.batchStatus != 5 && row.entity.batchStatus != 6" class="glyphicon glyphicon-cog batch--ui--grid--icon"></span>
 
-        <span  style="color:#FF9900;font-size:18px" ng-if="row.entity.batchStatus == 6" class="fa fa-exclamation-triangle"></span>
+        <span  style="color:#FF9900;" ng-if="row.entity.batchStatus == 6" class="fa fa-exclamation-triangle batch--ui--grid--icon"></span>
     </div>
 
 </div>
